# kiu

./: .flake8  README.md  pyproject.toml
src/: __init__.py  kiu-challenge.db  main.py
src/app/: __init__.py  kiu_challenge.py  report_kiu.py  trip_manager.py
src/config/: settings.py
src/db/: __init__.py  sqlite.py
src/models/: __init__.py  airport.py  client.py  plane.py  trip.py  trip_detail.py
src/schemas/: __init__.py  trip_schema.py
src/tests/: conftest.py  utils.py
src/tests/app/: test_reports.py  test_trip_manager.py
src/tests/models/: test_airport.py  test_clients.py  test_plane.py  test_trip.py  test_trip_detail.py
